--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,4 +1,3 @@
 en:
   search_banner:
-    headline: "Welcome to our community"
-    subhead: "We're happy to have you here. If you need help, please search before you post."
+    headline: "Talk about Trading!"   
